bk_ida/gccida/g3/nonoverlapping_memrefs_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2371:10: error: conflicting types for 'nonoverlapping_memrefs_p'
__int64  nonoverlapping_memrefs_p( __int64 a1, __int64 a2) 
         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:109:12: note: previous declaration is here
static int nonoverlapping_memrefs_p     PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2388:4: error: expected ';' after expression
rtx v19; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2388:5: error: use of undeclared identifier 'v19'
rtx v19; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2389:4: error: expected ';' after expression
rtx v20; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2389:5: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx v20; // r8 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2379:18: note: 'v10' declared here
 struct rtx_def *v10; // rbx 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2395:4: error: expected ';' after expression
rtx v26; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2395:5: error: use of undeclared identifier 'v26'
rtx v26; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2397:4: error: expected ';' after expression
rtx v28; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2397:5: error: use of undeclared identifier 'v28'
rtx v28; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2407:4: error: expected ';' after expression
rtx v39; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2407:5: error: use of undeclared identifier 'v39'
rtx v39; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2410:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rtwint; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2411:4: error: expected ';' after expression
rtx v43; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2411:5: error: use of undeclared identifier 'v43'
rtx v43; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2417:4: error: expected ';' after expression
rtx v49; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2417:5: error: use of undeclared identifier 'v49'
rtx v49; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2421:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2421:5: error: use of undeclared identifier 'v53'
rtx v53; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/alias.c:2424:4: error: expected ';' after expression
rtx v56; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonoverlapping_memrefs_p/src/obj/alias.o] Error 1
